# unified-memory-framework

include/umf/: memory_pool_ops.h  memory_provider.h  memory_provider_ops.h
include/umf/providers/: provider_level_zero.h
src/: libumf.def  libumf.map  memory_provider.c
src/critnib/: critnib.c
src/provider/: provider_cuda.c  provider_level_zero.c  provider_tracking.c
src/utils/: utils_concurrency.h  utils_level_zero.cpp  utils_posix_concurrency.c  utils_windows_concurrency.c
test/: CMakeLists.txt
test/common/: CMakeLists.txt  level_zero_mocks.cpp  level_zero_mocks.h  provider_null.c  ze_loopback.cpp  ze_loopback.h
test/pools/: pool_residency.cpp
test/providers/: provider_level_zero.cpp  provider_level_zero_not_impl.cpp  provider_level_zero_residency.cpp
